<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MovieMate</string>
    <string name="welcome_subtitle">Share your movie reviews with the community</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="create_account">Create Account</string>
    <string name="home_feed">Home Feed</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_photo">Change Photo</string>
    <string name="email_cannot_be_changed">Email address cannot be changed</string>
    <string name="search_by_movie_title">Search by movie title…</string>
    <string name="filter_reviews">Filter Reviews</string>
    <string name="by_genre">By Genre</string>
    <string name="by_rating">By Rating</string>
    <string name="all_genres">All Genres</string>
    <string name="all_ratings">All Ratings</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="cancel">Cancel</string>
    <string name="create_review">Create Review</string>
    <string name="edit_review">Edit Review</string>
    <string name="my_reviews">My Reviews</string>
    <string name="no_reviews_yet">No Reviews Yet</string>
    <string name="no_reviews_profile_message">Start sharing your movie opinions!</string>
    <string name="no_reviews_feed_message">Be the first to share a movie review with the community!</string>
    <string name="create_first_review">Create First Review</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="post_review">Post Review</string>
    <string name="update_review">Update Review</string>
    <string name="write_your_review">Write your review…</string>
    <string name="search_movie">Search for a movie…</string>
    <string name="upload_image">Upload Image</string>
    <string name="delete_review_title">Delete Review</string>
    <string name="delete_review_message">Are you sure you want to delete this review?</string>
    <string name="loading">Loading…</string>
    <string name="error_empty_fields">All fields are required to continue</string>
    <string name="error_login_failed">We couldn\'t sign you in. Please try again.</string>
    <string name="error_register_failed">Something went wrong during registration. Please try again.</string>
    <string name="error_select_movie">Don\'t forget to choose a movie</string>
    <string name="error_write_review">Share your thoughts — write a review first</string>
    <string name="error_select_rating">Please rate the movie to continue</string>
    <string name="review_posted">Your review is live!</string>
    <string name="review_updated">Your review has been updated!</string>
    <string name="review_deleted">Review removed successfully</string>
    <string name="profile_updated">Your profile looks great!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="genres">
        <item>All Genres</item>
        <item>Action</item>
        <item>Adventure</item>
        <item>Animation</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Documentary</item>
        <item>Drama</item>
        <item>Family</item>
        <item>Fantasy</item>
        <item>History</item>
        <item>Horror</item>
        <item>Music</item>
        <item>Mystery</item>
        <item>Romance</item>
        <item>Science Fiction</item>
        <item>Thriller</item>
        <item>War</item>
        <item>Western</item>
    </string-array>

    <string-array name="ratings">
        <item>All Ratings</item>
        <item>5 Stars</item>
        <item>4 Stars &amp; Up</item>
        <item>3 Stars &amp; Up</item>
        <item>2 Stars &amp; Up</item>
        <item>1 Star &amp; Up</item>
    </string-array>
</resources>
